# llms-from-scratch

./: README.md  environment.yml  pyproject.toml
llm_core/: README.md  config.yaml  config_owt.yaml  train.py
llm_core/layers/: __init__.py  attention.py  core.py  feedforward.py  nonlinearity.py
llm_core/models/: transformer.py
llm_core/optimizers/: optim.py
llm_core/utils/: utils.py
p0-pre-transformer/: environment.yml
p0_pre_transformer/word_embeddings/: README.md  corpus_builder.py  datasets.py  get_datasets.sh  losses.py  utils.py
p1-core/: README.md  environment.yml  eval.py  train.py
p1-core/configs/: eval.yaml  train_owt.yaml  train_ts.yaml
p1-core/layers/: attention.py  core.py  norms.py
p1-core/models/: __init__.py  transformer.py
p1-core/utils/: __init__.py  checkpointing.py  config_parser.py  misc.py  model_stats.py  profiling.py  utils.py
p1_core/: README.md  environment.yml  eval.py  generate.py  train.py
p1_core/configs/: eval.yaml  gen.yaml  train_owt.yaml  train_ts.yaml
p1_core/layers/: __init__.py  attention.py  core.py  feedforward.py  nonlinearity.py  pos_enc.py
p1_core/models/: transformer.py
p1_core/optimizers/: __init__.py  optim.py
p1_core/tokenizers/: base.py  bpe.py
p1_core/utils/: __init__.py  checkpointing.py  config_parser.py  data.py  evals.py  logging.py  (+4 more)
p1_pre_transformer/: environment.yml
p2_efficiency/: run_profile.py
p2_transformers/: README.md  bpe_tokenizer.py  config.yaml  config_gen.yaml  eval.py  generate.py  models.py  norms.py  optim.py  pos_enc.py  run_tokenizer.py  train.py  utils.py
(+156 files in other folders)
